--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00cfed</color>
+    <color name="colorPrimary">#563843</color>
     <color name="colorPrimaryDark">#02b3cc</color>
     <color name="colorAccent">#02b3cc</color>
 </resources>
